axion-ingestion-service/manifasts/ingestion-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-deployment
spec:
  selector:
    matchLabels:
      app: ingestion-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: ingestion-deployment
    spec:
      containers:
      - name: ingestion-deployment
        image: acraxionservice.azurecr.io/axion-ingestion-service:v2
        ports:
        - containerPort: 8000
