axion-ingestion-service/manifasts/ingestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestionservice
spec:
  type: ClusterIP
  selector:
    app: ingestion-deployment
  ports:
  - port: 8000
    targetPort: 8000
